--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
     </table>
 </head>
 <body>
-<nav id="menu">
-     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Kontak</a></li>
-    </ul>
-</nav>
+    <div id="menu">
+        <table>
+         <td id="menu" width="100%">Home</td>
+        </table>
+    </div>
 <table id="A" border="0">
     <tr>
         <td id="A1" width="15%" align="center" valign="top"><u><br>Menu Link<br><br>Menu Link<br><br>Menu Link<br><br>Menu Link<br><br>Menu Link<br></u></td>
